Fix rtl alignments on profile module

--- a/src/app/profile/components/card-detail/card-detail.component.scss
+++ b/src/app/profile/components/card-detail/card-detail.component.scss
@@ -23,7 +23,7 @@
   }
 }
 
-body[dir] {
+[dir] {
   :host {
     .date-container > div {
       margin-left: 0px;
