--- a/src/app/profile/pages/profile-page/profile-page.component.scss
+++ b/src/app/profile/pages/profile-page/profile-page.component.scss
@@ -23,7 +23,7 @@
   }
 }
 
-body[dir] {
+[dir] {
   .ie,
   .edge {
     :host {
